feat: adiciona busca de reservas com filtros opcionais